# GLESC

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  GLESC.cdproj  GLESC.proj  GLESC.sl  Game.cpp  Game.h  LEEME.md  LICENSE.txt  Makefile  README.md  all_files_and_folders.txt  common.h  imgui.ini  main.cpp  todo
.github/workflows/: static.yml
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
assets/shaders/: Shader.glsl
cmake/: CompilerDefinitions.cmake  CompilerFlags.cmake  FileLocations.cmake  FindPackages.cmake  LinkedLibraries.cmake  PlatformDetection.cmake  Printing.cmake  Testing.cmake
cmake/core/: CompilerDefinitions.cmake  CompilerFlags.cmake  ErrorChecking.cmake  FileLocations.cmake
cmake/modules/: CompilerDefinitions.cmake  CompilerFlags.cmake  FileLocations.cmake  FindPackages.cmake  Including.cmake  LinkLibraries.cmake  PlatformDetection.cmake  Testing.cmake
doc/: CODE_STYLE.md  Informacion_logo_y_diseño.txt  LEEME.md  Logo_GLESC.xcf  TFG_GLESC_Documentation.docx  TFG_GLESC_Planification.mpp  TFG_GLESC_Planification_final.mpp  TFG_GLESC_Planification_initial.mpp  TFG_architecture.drawio  mejoras_docu_tfg.txt  presupuesto_final.xlsx  presupuesto_inicial.xlsx  ~$G_GLESC_Documentation.docx
doc/cppdepend/CppDependOut/: chats.json
doc/diagrams/: .$Architecture_Diagram.drawio.bkp  .$Architecture_Diagram_planification.drawio.bkp  .$CMakeArchitecture.drawio.bkp  .$Ciclo_Uso_Herramientas.drawio.bkp  .$ECS_Architecture.drawio.bkp  .$ECS_Diagrama.drawio.bkp  .$ECS_Diagrama.drawio.dtmp  .$Subsystems_architecture_diagram.drawio.bkp  .$mesh_creation_graph.drawio.bkp  Architecture_Diagram.drawio  Architecture_Diagram_planification.drawio  CMakeArchitecture.drawio  Ciclo_Uso_Herramientas.drawio  ECS_Architecture.drawio  ECS_Diagrama.drawio  ECS_SubsystemComponentsArchitecture.drawio  ECS_memory_layout.drawio  Game_Loop_Diseño.drawio  Math_architecture.drawio  RBS.drawio  Subsystems_architecture_diagram.drawio  mesh_creation_graph.drawio
doc/directory-documentation/: folder-structure.html  folder_structure.css  generate_dir_doc.py
doc/doxy/: Doxyfile  doxygen_log.txt
doc/doxy/custom-doxy/: DoxygenLayout.xml
doc/planification/: .$PBS_initial.drawio.bkp  PBS_final.drawio  PBS_initial.drawio  TFG_GLESC_Planification.mpp  TFG_GLESC_Planification_final.mpp  TFG_GLESC_Planification_initial.mpp  TFG_GLESC_Text_Planification_final.txt  TFG_GLESC_Text_Planification_initial.txt  TFG_GLESC_drawio_Text_Planification_final.txt  TFG_GLESC_drawio_Text_Planification_initial.txt  mpp_to_drawio.py  presupuesto_final.xlsx  presupuesto_inicial.xlsx
include/: color.hpp
include/core/: Camera.h  ComponentContainer.h  ComponentManager.h  Coordinator.h  Debugger.h  ECSContainer.h  ECSFactory.h  EntityContainer.h  EntityManager.h  FPS.h  GLESC.h  MyWindow.h  SystemContainer.h  SystemManager.h  TFGL.h  Types.h  Window.h
include/core/components/: CameraComponent.h  Component.h  ComponentArray.h  InputComponent.h  MaterialComponent.h  PhysicsComponent.h  RenderComponent.h  RigidBodyComponent.h  TransformComponent.h
include/core/entities/: Cube.h  Entity.h  EntityCoordinator.h
include/core/renderer/: Mesh.h  Renderer.h
include/core/systems/: System.h
include/ecs/components/: CameraComponent.h  ComponentArray.h  InputComponent.h  MaterialComponent.h  PhysicsComponent.h  RenderComponent.h  RigidBodyComponent.h  TransformComponent.h
include/ecs/entities/: Entity.h
include/ecs/systems/: CameraSystem.h  InputSystem.h  PhysicsSystem.h  RenderSystem.h  System.h  TransformSystem.h
include/engine/: Config.h  EngineCamera.h  EntityTypes.h  GLESC.h
include/engine/ecs/: ECSContainer.h  ECSTypes.h
include/engine/foundation/: FPS.h
include/engine/scene/: Scene.h  SceneContainer.h  SceneDependecies.h  SceneManager.h  SceneTypes.h
include/engine/subsystems/: EngineComponent.h
include/exceptions/: BaseException.h  EngineException.h  RenderException.h
include/game/: FPS.h  GUI.h  Game.h  TerrainGenerator.h
include/imgui/: imgui_impl_sdl.cpp
include/input-manager/: KeyAction.h
include/renderer/: CoordinateSystem.h  GlWrapper.h  Mesh.h  RenderDebugger.h  Renderer.h  TextureManager.h  WindowManager.h
include/renderer/shaders/: ShaderManager.h
include/util/: Console.h  MyPath.h
lib/: libSDL2_ttf.la
lib/include/: color.hpp
lib/include/SDL2/: SDL_hints.h  SDL_main.h
lib/include/imgui/: example.cpp  imgui.cpp  imgui.h  imgui_demo.cpp  (+10 more)
lib/pkgconfig/: SDL2_ttf.pc
scripts/bash/: print-project-files.sh
scripts/py/: static_check.py
src/: Camera.cpp  Camera.h  CoordinateSystem.cpp  CoordinateSystem.h  FPS.cpp  FPS.h  GUI.cpp  GUI.h  Game.cpp  Game.h  MyPath.cpp  MyPath.h  MyWindow.cpp  MyWindow.h  PreprocessorUtil.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  Triangle.cpp  Triangle.h  Window.cpp  Window.h  common.h  main.cpp
src/Components/: Transform.cpp  Transform.h
src/Engine/: Camera.h  Debugger.cpp  Debugger.h
src/Entities/: Cube.cpp  Cube.h  Entity.cpp  Entity.h
src/Game/: Camera.h  FPS.cpp  FPS.h  GUI.cpp  GUI.h  Game.cpp  Game.h  TerrainGenerator.h  main.cpp
src/Util/: Console.cpp  Console.h  MyPath.cpp
src/core/: Camera.cpp  ComponentContainer.cpp  ComponentManager.cpp  Debugger.cpp  FPS.cpp  GLESC.cpp  InputController.cpp  MyWindow.cpp  RenderDebugger.cpp  TFGL.cpp  Window.cpp  main.cpp
src/engine/: EngineCamera.cpp  GLESC.cpp  SceneManager.cpp  main.cpp
src/exceptions/: BaseException.cpp  EngineException.cpp  RenderException.cpp
src/game/: Game.cpp
src/renderer/: CoordinateSystem.cpp  GlWrapper.cpp  Mesh.cpp  Renderer.cpp  ShaderManager.cpp  TextureManager.cpp  Window.cpp  WindowManager.cpp
tests/: LoopHelper.cpp  LoopHelper.h  TestsConfig.cpp  TestsConfig.h  main.cpp
tests/unit/: CustomTestingFramework.cpp  CustomTestingFramework.h  CustomTestingFrameworkTest.cpp
(+8945 files in other folders)
